# P2P-Network

./: .cproject  .gitignore  .project  CMakeLists.txt  ClientP2P.cpp  ClientP2P.h  CommandInterpreter.h  Commands.cpp  Commands.h  MainInterfaces.h  Makefile  MyChat.cpp  MyChat.h  NatPMP.cpp  NatPMP.h  NetSocketWorker.cpp  NetSocketWorker.h  README.md  StandartBuilder.cpp  StandartBuilder.h  StandartCommandInterpreter.cpp  StandartCommandInterpreter.h  StandartDataWorker.cpp  StandartDataWorker.h  TODO  ThreadRequestsHandler.cpp  ThreadRequestsHandler.h  Translator.cpp  Translator.h  getips  main.cpp  res.ii  runner.cpp
.externalToolBuilders/: TestsBuilder.launch
Debug/: ClientP2P.d  Makefile  NetSocketWorker.d  P2P-App  StandartBuilder.d  StandartCommandInterpreter.d  StandartDataWorker.d  ThreadRequestsHandler.d  Translator.d  main.d  makefile  runner  subdir.mk
UnitTests/: FirstFile.h
chat/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/includes/: Client.h  ClientP2P.h  CommandInterpreter.h  Commands.h  CoreObjectsFactory.h  MainInterfaces.h  NatPMP.h  NetSocketWorker.h  ResponseBody.h  StandartBuilder.h  StandartCommandInterpreter.h  StandartDataWorker.h  StandartObjectsFactory.h  ThreadRequestsHandler.h  Translator.h
core/src/: Client.cpp  ClientP2P.cpp  Commands.cpp  MainInterfaces.cpp  NatPMP.cpp  NetSocketWorker.cpp  StandartBuilder.cpp  StandartCommandInterpreter.cpp  StandartDataWorker.cpp  StandartObjectsFactory.cpp  ThreadRequestsHandler.cpp  Translator.cpp
data/: firstfile.txt
docs/: scheme core lib.mdj
includes/: ClientP2P.h  MyChat.h  (+10 more)
(+16 files in other folders)
